--- a/colab/Ola_Mundo.ipynb
+++ b/colab/Ola_Mundo.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Olá mundo Seção"
+        "# Olá mundo Seção 1"
       ],
       "metadata": {
         "id": "5U0AP_Uw1Ati"
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Olá Mundo"
+        "Olá Mundo 2"
       ],
       "metadata": {
         "id": "eX8oojKW0BYL"
@@ -46,7 +46,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Code",
+        "plt.show()"
+      ],
       "metadata": {
         "id": "j01DAKFNz_VT"
       },
@@ -56,7 +59,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Nova seção"
+        "# Nova seção 4"
       ],
       "metadata": {
         "id": "JIAgbw8A1BKg"
