--- a/colab/Ola_Mundo.ipynb
+++ b/colab/Ola_Mundo.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Olá mundo Seção 1"
+        "# Olá mundo Seção"
       ],
       "metadata": {
         "id": "5U0AP_Uw1Ati"
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Olá Mundo 2"
+        "Olá Mundo"
       ],
       "metadata": {
         "id": "eX8oojKW0BYL"
@@ -46,10 +46,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Code",
-        "plt.show()"
-      ],
+      "source": [],
       "metadata": {
         "id": "j01DAKFNz_VT"
       },
@@ -59,7 +56,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Nova seção 4"
+        "# Nova seção"
       ],
       "metadata": {
         "id": "JIAgbw8A1BKg"
